--- a/miniprogram/components/prompt-input/index.wxml
+++ b/miniprogram/components/prompt-input/index.wxml
@@ -34,8 +34,8 @@
     </block>
   </view>
   <view class='button-container {{sendLoading? "offline":""}}'>
-    <view class='button1'>
-      <!-- <image class="button-inner send-button" src="../../images/settings.svg"></image> -->
+    <view class='button1'  bindtap="onBindSettings">
+      <image class="button-inner send-button" src="../../images/settings.svg"></image>
     </view>
     <view class='button {{sendLoading? "offline":""}}' bindtap="onBindSend">
       <image class="button-inner send-button" src="../../images/send.svg"></image>
