--- a/miniprogram/components/ai-settings/openai-gpt3/index.wxml
+++ b/miniprogram/components/ai-settings/openai-gpt3/index.wxml
@@ -4,18 +4,18 @@
     <view class="form-item-label">
       temperature<text class="use-prompt" bindtap="onUsePrompt"></text>
     </view>
-    <input class="item form-item-input" placeholder-class="input-placeholder" type="text" placeholder='temperature' value="{{title}}" bindinput='onTitleChange'></input>
+    <input class="item form-item-input" placeholder-class="input-placeholder" type="digit" placeholder='temperature' value="{{temperature}}" bindinput='onTitleChange'></input>
   </view>
   <view class="form-item">
     <view class="form-item-label">
       top_p<text class="use-prompt" bindtap="onUsePrompt"></text>
     </view>
-    <input class="item form-item-input" placeholder-class="input-placeholder" type="text" placeholder='top_p' value="{{title}}" bindinput='onTitleChange'></input>
+    <input class="item form-item-input" placeholder-class="input-placeholder" type="digit" placeholder='top_p' value="{{topp}}" bindinput='onTitleChange'></input>
   </view>
   <view class="form-item">
     <view class="form-item-label">
       stop<text class="use-prompt" bindtap="onUsePrompt"></text>
     </view>
-    <input class="item form-item-input" placeholder-class="input-placeholder" type="text" placeholder='top_p' value="{{title}}" bindinput='onTitleChange'></input>
+    <input class="item form-item-input" placeholder-class="input-placeholder" type="digit" placeholder='top_p' value="{{stopStr}}" bindinput='onTitleChange'></input>
   </view>
 </view>
