--- a/miniprogram/pkg_mine/pages/ai/ai.wxml
+++ b/miniprogram/pkg_mine/pages/ai/ai.wxml
@@ -25,7 +25,7 @@
   <view>
     <button bindtap="onSwitchAI" class="brain-item-switch" disabled="{{currentAIType === selected}}">设置为当前</button>
   </view>
-  <view class="">
+  <!-- <view class="">
     <openai-gpt3-settings wx:if="{{currentAIType==='ChatGPT_Text'}}"></openai-gpt3-settings>
-  </view>
+  </view> -->
 </view>
