--- a/miniprogram/pkg_mine/components/settings/index.wxml
+++ b/miniprogram/pkg_mine/components/settings/index.wxml
@@ -15,6 +15,13 @@
     <view class="mine-item-title">清空记录</view>
     <view class="mine-item-button" bindtap="onDelete">清空</view>
   </view>
+  <view class="mine-item">
+    <view class="mine-item-icon">
+      <view class="icon iconf icon-deletefill"></view>
+    </view>
+    <view class="mine-item-title">客服</view>
+    <button open-type="contact" class="mine-item-button">进入</button>
+  </view>
   <!-- <view class="mine-item">
       <view class="mine-item-icon">
         <image src="./images/gz.png"></image>
