--- a/miniprogram/components/tab-bar/tab-bar.wxml
+++ b/miniprogram/components/tab-bar/tab-bar.wxml
@@ -1,75 +1,24 @@
 <view class="tabBar">
-  <view wx:if="{{aiSelectShow}}" class="bottom-dialog-bg"></view>
   <view class="cu-bar tabbar bg-white shadow">
     <!-- 趣问菜单 -->
-    <block wx:if="{{idx == 0}}">
-      <view class="action  text-current ">
-        <botton class='iconf icon-discover'></botton>
-        趣问
-      </view>
-    </block>
-    <block wx:else="{{idx == 1}}">
-      <!-- 不是当前 -->
-      <view class="action text-normal" catchtap='goToTab' data-url="../../../pkg_prompts/pages/prompts/prompts" data-index="0">
-        <botton class='iconf icon-discover'></botton>
-        趣问
-      </view>
-    </block>
-    <!-- 软软菜单 -->
-    <block wx:if="{{idx == 1}}">
-      <block wx:if="{{aiSelectShow}}">
-        <!-- 菜单展开 -->
-        <view class="action add-action text-current" catchtap='showAISelect'>
-          <botton class='iconf cu-btn icon-close bg-rr shadow'></botton>
-          软软
-        </view>
-      </block>
-      <block wx:else="{{aiSelectShow}}">
-        <view class="action add-action text-current" catchtap='showAISelect'>
-          <botton class='iconf cu-btn icon-skinfill bg-rr shadow'></botton>
-          软软
-        </view>
-      </block>
-    </block>
-    <block wx:else="{{idx == 1}}">
-      <!-- 不是当前 -->
-      <view class="action add-action text-normal" catchtap='goToTab' data-url="../../../pkg_rr/pages/rr/rr" data-index="1">
-        <botton class='iconf cu-btn icon-skinfill bg-rr shadow'></botton>
-        软软
-      </view>
-    </block>
+    <view class="action {{idx == 0?'text-current':'text-normal'}}" catchtap='{{idx != 0?"goToTab":""}}' data-url="../../../pkg_prompts/pages/prompts/prompts" data-index="0">
+      <botton class='iconf icon-discover bg-rr'></botton>
+      发现
+    </view>
+    <!-- AI问答 -->
+    <view class="action {{idx == 1?'text-current':'text-normal'}}" catchtap='{{idx != 1?"goToTab":""}}' data-url="../../../pkg_rr/pages/chat/chat" data-index="1">
+      <botton class='iconf icon-message bg-rr'></botton>
+      AI问答
+    </view>
+    <!-- AI绘画 -->
+    <view class="action {{idx == 3?'text-current':'text-normal'}}" catchtap='{{idx != 3?"goToTab":""}}' data-url="../../../pkg_painter/pages/home/index" data-index="3">
+      <botton class='iconf icon-skin bg-rr'></botton>
+      AI绘画
+    </view>
     <!-- 我的菜单 -->
-    <block wx:if="{{idx == 2}}">
-      <view class="action  text-current ">
-        <botton class='iconf icon-my'></botton>
-        我的
-      </view>
-    </block>
-    <block wx:else="{{idx == 2}}">
-      <view class="action text-normal" catchtap='goToTab' data-url="../../../pkg_mine/pages/mine/mine" data-index="2">
-        <botton class='iconf icon-my'></botton>
-        我的
-      </view>
-    </block>
-  </view>
-</view>
-<view wx:if="{{aiSelectShow}}" class="bottom-dialog">
-  <view class="bottom-dialog-body">
-    <scroll-view scroll-x="true" style="width: 100%;">
-      <view class="brain-list">
-        <view bindtap="onAIItemTap" class="brain-item {{aiType === 'ChatGPT_Text'? 'selected' :''}}" data-aitype="ChatGPT_Text">
-          <image class="brain-item-icon" src="../../images/logo.png"></image>
-          <view class="brain-item-title">文本生成</view>
-        </view>
-        <view bindtap="onAIItemTap" class="brain-item  {{aiType === 'ChatGPT_Image'? 'selected' :''}}" data-aitype="ChatGPT_Image">
-          <image class="brain-item-icon" src="../../images/hj.png"></image>
-          <view class="brain-item-title">图片生成</view>
-        </view>
-        <view bindtap="onAIItemTap" style="display: none;" class="brain-item  {{aiType === 'ChatGPT_Edit_Image'? 'selected' :''}}" data-aitype="ChatGPT_Edit_Image">
-          <image class="brain-item-icon" src="../../images/hj.png"></image>
-          <view class="brain-item-title">图片编辑</view>
-        </view>
-      </view>
-    </scroll-view>
+    <view class="action {{idx == 2?'text-current':'text-normal'}}" catchtap='{{idx != 2?"goToTab":""}}' data-url="../../../pkg_mine/pages/mine/mine" data-index="2">
+      <botton class='iconf icon-my bg-rr'></botton>
+      我的
+    </view>
   </view>
 </view>
