--- a/miniprogram/pkg_painter/pages/home/index.wxml
+++ b/miniprogram/pkg_painter/pages/home/index.wxml
@@ -2,25 +2,33 @@
 <view class="container">
   <scroll-view scroll-y="true" class="card-view">
     <view class="cards">
-      <view class="card-item" data-productId="1">
-        <view>生成图片</view>
-        <view>(mdjrny-v4 style)</view>
+      <view class="card-item" data-productId="1" data-page="../diffusion/index" bindtap="onCardTap">
+        <view class="item-icon icon1">
+          <image src="../../images/icon1.svg"></image>
+        </view>
+        <view class="item-title">生成图片</view>
+        <view class="item-sub-title">文本描述生成图片</view>
       </view>
-      <view class="card-item">
-        <view>智能涂鸦</view>
-        <view>(mdjrny-v4 style)</view>
+      <view class="card-item" data-productId="2" data-page="../diffusion/index" bindtap="onCardTap">
+        <view class="item-icon icon2">
+          <image src="../../images/icon2.svg"></image>
+        </view>
+        <view class="item-title">智能涂鸦</view>
+        <view class="item-sub-title">手绘线图生成图片</view>
       </view>
-      <view class="card-item">
-        <view>生成图片</view>
-        <view>(mdjrny-v4 style)</view>
+      <view class="card-item" data-productId="3" data-page="../diffusion/index" bindtap="onCardTap">
+        <view class="item-icon icon3">
+          <image src="../../images/icon3.svg"></image>
+        </view>
+        <view class="item-title">生成图片</view>
+        <view class="item-sub-title">图片生成线图</view>
       </view>
-      <view class="card-item">
-        <view>转换线图</view>
-        <view>(mdjrny-v4 style)</view>
-      </view>
-      <view class="card-item">
-        <view>转换线图</view>
-        <view>(mdjrny-v4 style)</view>
+      <view class="card-item" data-productId="4" data-page="../diffusion/index" bindtap="onCardTap">
+        <view class="item-icon icon4">
+          <image src="../../images/icon4.svg"></image>
+        </view>
+        <view class="item-title">转换线图</view>
+        <view class="item-sub-title">图片生成图片</view>
       </view>
     </view>
   </scroll-view>
