--- a/miniprogram/components/prompts-input/index.wxss
+++ b/miniprogram/components/prompts-input/index.wxss
@@ -16,7 +16,7 @@
   display: flex;
   flex: 1;
   flex-direction: column;
-  padding: 6rpx 0rpx;
+  padding: 6rpx 10rpx;
 }
 
 .button-container {
@@ -38,8 +38,10 @@
 }
 
 .text-button {
-  width: 180rpx;
-  font-size: 30rpx;
+  background-color: #008FFB;
+  color: #FFFFFF;
+  width: 120rpx;
+  font-size: 26rpx;
 }
 
 .textarea {
