--- a/miniprogram/iconfont.wxss
+++ b/miniprogram/iconfont.wxss
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 3939296 */
-  src: url('//at.alicdn.com/t/c/font_3939296_40rd3mjbrwa.woff2?t=1678303020037') format('woff2'),
-       url('//at.alicdn.com/t/c/font_3939296_40rd3mjbrwa.woff?t=1678303020037') format('woff'),
-       url('//at.alicdn.com/t/c/font_3939296_40rd3mjbrwa.ttf?t=1678303020037') format('truetype');
+  src: url('//at.alicdn.com/t/c/font_3939296_ns6xyc1x43i.woff2?t=1678308949599') format('woff2'),
+       url('//at.alicdn.com/t/c/font_3939296_ns6xyc1x43i.woff?t=1678308949599') format('woff'),
+       url('//at.alicdn.com/t/c/font_3939296_ns6xyc1x43i.ttf?t=1678308949599') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,10 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-kefu:before {
+  content: "\e625";
 }
 
 .icon-speech:before {
