--- a/miniprogram/pkg_mine/pages/index/index.wxml
+++ b/miniprogram/pkg_mine/pages/index/index.wxml
@@ -1,5 +1,45 @@
 <!--pkg_mine/pages/index/index.wxml-->
 <view class="page-with-tabbar container">
-  <text>pkg_mine/pages/index/index.wxml</text>
+  <!-- 用户卡片 -->
+  <view class="mine-user-card">
+    <view class='user-card'>
+      <button class="avatar-wrapper" open-type="chooseAvatar" bind:chooseavatar="onChooseAvatar">
+        <image class="avatar" src="{{avatarUrl == '' ? '/images/logo.png':avatarUrl}}"></image>
+      </button>
+      <form bindsubmit="formSubmit">
+        <view class="nickname-form">
+          <block wx:if="{{isEdit}}">
+            <input type="nickname" name="nickname" class="nickname" value="{{nicknamme}}" placeholder="请输入昵称" />
+            <button class="nickname-button save-button" type="plain" formType="submit">保存</button>
+          </block>
+          <block wx:else="{{isEdit}}">
+            <view class="nickname">{{nickname == ''?'未填写昵称':nickname}}</view>
+            <view class="nickname-button edit-button" bindtap="onEditButton">编辑</view>
+          </block>
+        </view>
+      </form>
+    </view>
+    <view class="user-card-buttons">
+      <view>签到</view>
+    </view>
+  </view>
+  <view class="header">
+    <mine-bar></mine-bar>
+  </view>
+
+  <view class="content">
+    <block wx:if="{{activeModule == 0}}">
+      <!-- 我的积分 -->
+      <points-card></points-card>
+      <reward-logs class="reward-logs"></reward-logs>
+      <settings></settings>
+    </block>
+    <block wx:if="{{activeModule == 6}}">
+      <!-- 我的发布 -->
+    </block>
+    <block wx:if="{{activeModule == 1}}">
+      <!-- 我的设置 -->
+    </block>
+  </view>
 </view>
 <tab-bar idx="3"></tab-bar>
