--- a/miniprogram/pkg_mine/pages/index/index.wxss
+++ b/miniprogram/pkg_mine/pages/index/index.wxss
@@ -1,1 +1,84 @@
 /* pkg_mine/pages/index/index.wxss */
+@import '/iconfont.wxss';
+
+.iconf {
+  font-family: "iconfont" !important;
+  font-size: inherit;
+  font-style: normal;
+}
+
+.mine-user-card {
+  width: 100%;
+  height: 300rpx;
+  display: flex;
+  justify-content: space-between;
+  background-color: #FFFFFF;
+  border-bottom: 2px solid #EBEBEB;
+}
+
+
+.user-card {
+  display: flex;
+  flex-direction: column;
+  width: 200rpx;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  background-color: #FFFFFF;
+}
+
+.avatar-wrapper {
+  padding: 0;
+  width: 180rpx !important;
+  height: 180rpx !important;
+  border-radius: 50%;
+  border: 4rpx solid #95dfab;
+  box-sizing: border-box;
+}
+
+.avatar {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+.nickname-form {
+  position: relative;
+  display: flex;
+  height: 60rpx;
+}
+
+.nickname {
+  font-size: 28rpx;
+  font-weight: 600;
+  line-height: 50rpx;
+  text-align: center;
+}
+
+.nickname-button {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 90rpx;
+  margin-right: -90rpx;
+  padding-left: 10rpx;
+  font-size: 24rpx;
+  line-height: 50rpx;
+  text-decoration: underline;
+  color: #0062DB;
+}
+
+.nickname-button .edit-button {}
+
+.save-button {
+  display: inline !important;
+  width: 90rpx !important;
+  height: 40rpx !important;
+  bottom: -28rpx;
+  margin-top: 4rpx;
+  line-height: 40rpx;
+  margin: 0;
+  padding: 0;
+  text-align: left;
+  background-color: #FFFFFF;
+}
