--- a/miniprogram/pkg_mine/components/reward-logs/index.wxml
+++ b/miniprogram/pkg_mine/components/reward-logs/index.wxml
@@ -1,2 +1,17 @@
 <!--pkg_mine/components/reward-logs/index.wxml-->
-<text>pkg_mine/components/reward-logs/index.wxml</text>
+<view class="container">
+  <view class="reward-logs-header">
+    <view>最近30条</view>
+    <view class="refresh-link" bindtap="onRefresh">刷新</view>
+    <!-- <view>昨天</view> -->
+  </view>
+  <scroll-view scroll-y="true" class="reward-logs-container">
+    <block wx:for="{{rewardLogs}}" wx:for-item="item" wx:key="item" wx:for-index="itemIndex">
+      <view class="list-item {{item.is_reward?'isreward':''}}">
+        <div class="amount">{{item.amount}}</div>
+        <div class="reason">{{item.reason}}</div>
+        <div class="time">{{item.create_time_str}}</div>
+      </view>
+    </block>
+  </scroll-view>
+</view>
