--- a/miniprogram/iconfont.wxss
+++ b/miniprogram/iconfont.wxss
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 3939296 */
-  src: url('//at.alicdn.com/t/c/font_3939296_ns6xyc1x43i.woff2?t=1678308949599') format('woff2'),
-       url('//at.alicdn.com/t/c/font_3939296_ns6xyc1x43i.woff?t=1678308949599') format('woff'),
-       url('//at.alicdn.com/t/c/font_3939296_ns6xyc1x43i.ttf?t=1678308949599') format('truetype');
+  src: url('/fonts/iconfont.woff2?t=1678327285973') format('woff2'),
+       url('/fonts/iconfont.woff?t=1678327285973') format('woff'),
+       url('/fonts/iconfont.ttf?t=1678327285973') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,46 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-fabu:before {
+  content: "\e626";
+}
+
+.icon-quxiao:before {
+  content: "\e627";
+}
+
+.icon-queren:before {
+  content: "\e628";
+}
+
+.icon-zhifu:before {
+  content: "\e629";
+}
+
+.icon-tianjiazijin:before {
+  content: "\e62c";
+}
+
+.icon-jianshaoshuifei:before {
+  content: "\e62e";
+}
+
+.icon-shengchengerweima:before {
+  content: "\e636";
+}
+
+.icon-jianglijili:before {
+  content: "\e647";
+}
+
+.icon-xianzhixiaofeiling:before {
+  content: "\e644";
+}
+
+.icon-xiaofei:before {
+  content: "\e786";
 }
 
 .icon-kefu:before {
@@ -168,3 +208,4 @@
 .icon-send:before {
   content: "\e601";
 }
+
