--- a/miniprogram/components/msgs/message-stack/index.wxss
+++ b/miniprogram/components/msgs/message-stack/index.wxss
@@ -1,1 +1,203 @@
 /* components/message-stack/index.wxss */
+
+.container {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  overflow: hidden;
+  box-sizing: border-box;
+}
+
+.history {
+  height: 100%;
+  font-size: 14px;
+  display: flex;
+  flex-direction: column;
+}
+
+.empty-message {
+  color: #999999;
+}
+
+/* 聊天 */
+.chat-news {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  margin: 20rpx 0rpx;
+}
+
+.request {
+  justify-content: flex-end;
+}
+
+.response {
+  justify-content: flex-start;
+}
+
+.request-content {
+  background-color: #D4E6FB;
+  text-align: right;
+  border-radius: 10rpx;
+  min-width: calc(100vw - 200rpx);
+  line-height: 48rpx;
+  padding: 10rpx;
+}
+
+.response-content {
+  background-color: #FFFFFF;
+  text-align: left;
+  border-radius: 10rpx;
+  min-width: 76%;
+  line-height: 48rpx;
+  padding: 10rpx;
+}
+
+.news-content {
+  padding: 5rpx 10rpx;
+  flex-grow: 1;
+  min-width: 60%;
+  max-width: 86%;
+  display: flex;
+  border-radius: 6rpx;
+}
+
+.actions-bar {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  border-top: 2rpx solid #dedede;
+  background-color: #ECECEC;
+}
+
+.request-content .actions-bar {
+  border-top: 2rpx solid #dedede;
+  background-color: #95EC69;
+}
+
+
+.actions-bar-button {
+  height: 80rpx;
+}
+
+.actions-bar-button button {
+  width: 80rpx;
+  font-weight: 700;
+  border: 0;
+  height: 80rpx;
+  margin: 0rpx 10rpx;
+  line-height: 80rpx;
+  font-size: 24rpx;
+  color: #000000;
+  padding: 2rpx 10rpx;
+}
+
+
+.request .news-content {
+  justify-content: flex-end;
+}
+
+.response .news-content {
+  justify-content: flex-start;
+}
+
+.news-avatar .name {
+  display: inline-block;
+  text-align: center;
+}
+
+.news-avatar .avatar {
+  display: inline-block;
+  width: 96rpx;
+  height: 96rpx;
+  border-radius: 50%;
+}
+
+.chat-notice {
+  text-align: center;
+  font-size: 30rpx;
+  padding: 10rpx 0;
+  color: #666;
+}
+
+.selectImg {
+  display: inline-block;
+  width: 150rpx;
+  height: 150rpx;
+  margin-left: 50rpx;
+}
+
+.new_img {
+  width: 60rpx;
+  height: 60rpx;
+  border-radius: 50%;
+  vertical-align: middle;
+  margin-right: 10rpx;
+}
+
+::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+  color: transparent;
+  z-index: -1;
+}
+
+/* 信息输入区域 */
+.message {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  min-height: 200rpx;
+  background-color: #FFFFFF;
+  border-top: 2rpx solid #dedede;
+  border-bottom: 2rpx solid #dedede;
+}
+
+.loading {
+  display: inline;
+  align-items: center;
+  min-width: 240rpx;
+  padding: 0rpx 10rpx;
+}
+
+.loading1 {
+  background-color: coral;
+  color: #FFFFFF;
+  display: flex;
+  align-items: center;
+  min-width: 240rpx;
+  line-height: 60rpx;
+  padding: 0rpx 10rpx;
+}
+
+.loading image {
+  margin-left: 10rpx;
+}
+
+.loading-blink {
+  animation: blink 0.5s linear infinite;
+  -webkit-animation: loading-blink 0.5s linear infinite;
+  -moz-animation: loading-blink 0.5s linear infinite;
+  -ms-animation: loading-blink 0.5s linear infinite;
+  -o-animation: loading-blink 0.5s linear infinite;
+}
+
+@keyframes loading-blink {
+  0% {
+    color: #000000;
+  }
+
+  50% {
+    color: transparent;
+  }
+
+  100% {
+    color: #000000;
+  }
+}
+
+
+.send-button-inner {
+  width: 52rpx;
+  height: 52rpx;
+}
