--- a/miniprogram/components/prompts-input/index.wxss
+++ b/miniprogram/components/prompts-input/index.wxss
@@ -10,6 +10,8 @@
 .container {
   width: 100%;
   display: flex;
+  background-color: #FFFFFF;
+  padding: 10rpx 0;
 }
 
 .input-container {
@@ -23,16 +25,18 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: flex-end;
   padding: 8rpx 8rpx;
 }
 
 .button {
-  width: 80rpx;
-  height: 80rpx;
+  width: 66rpx;
+  height: 66rpx;
   display: flex;
   overflow: hidden;
-  color: #7B7B7B;
-  font-size: 60rpx;
+  color: #9B9B9B;
+  font-size: 50rpx;
+  line-height: 60rpx;
   justify-content: center;
   align-items: center;
 }
@@ -46,12 +50,12 @@
 
 .textarea {
   width: 100%;
-  height: 90rpx;
+  min-height: 60rpx;
   text-align: left;
   background-color: #ECECEC;
   color: #474747;
   border-radius: 16rpx;
-  padding: 20rpx 8rpx;
+  padding: 8rpx 8rpx;
 }
 
 .input-placeholder {
