--- a/miniprogram/pages/chat/index.wxml
+++ b/miniprogram/pages/chat/index.wxml
@@ -1,10 +1,10 @@
 <!--pages/chat/index.wxml-->
 <view class="page-with-tabbar container">
   <view class="message-stack">
-    <message-stack></message-stack>
+    <message-stack data="{{newslist}}"></message-stack>
   </view>
   <view class="prompts-input">
-    <prompts-input></prompts-input>
+    <prompts-input content="{{messageValue}}" sendLoading="{{sendLoading}}" bindsend="onSendTap" bindsettings="onSettingsTap"></prompts-input>
   </view>
 </view>
 <tab-bar idx="0"></tab-bar>
